--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.32.0",
     "axios": "^1.4.0",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
